<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingStart="4dp"
    android:paddingTop="12dp"
    android:paddingEnd="4dp"
    android:paddingBottom="12dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/alert_collizion_title"
        android:textColor="@color/darkRed"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/alert_collizion_message"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/alert_account_load_old"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_help_add"
        android:text="@string/alert_collizion_agree"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/alert_account_cancel"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_help_answer"
        android:text="@string/alert_collizion_cancel"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>