<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/help_add_btn"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_help_add"
        android:drawableEnd="@drawable/coins"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/dialog_help_add"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/help_del_btn"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_help_del"
        android:drawableEnd="@drawable/coins"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/dialog_help_del"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <Button
        android:id="@+id/help_answer_btn"
        style="@style/Widget.AppCompat.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:background="@drawable/button_help_answer"
        android:drawableEnd="@drawable/coins"
        android:gravity="center"
        android:padding="4dp"
        android:text="@string/dialog_help_answer"
        android:textColor="@color/black"
        android:textSize="16sp" />

</LinearLayout>