<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="fill_vertical"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10"
        tools:background="@color/white"
        tools:context=".ui.start.StartFragment">

        <!--<TextView
            android:id="@+id/start_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            tools:text="Отгадано х/х"
            android:textColor="@color/black"
            android:layout_weight="0"
            android:textSize="18sp" />-->

        <TextView
            android:id="@+id/start_welcome"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="3"
            android:contentDescription="@string/image_description_default"
            android:src="@drawable/first2" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_start"
                style="@style/NoShadowButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_start"
                android:padding="12dp"
                android:text="@string/start_btn_text"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:saveEnabled="false" />

            <Button
                android:id="@+id/google_sign_out_btn"
                style="@style/Widget.AppCompat.ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/indigo"
                android:drawableStart="@drawable/googleg_standard_color_18"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:saveEnabled="false"
                android:text="@string/start_exit_btn_text"
                android:textColor="@color/white"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn_exit"
                style="@style/NoShadowButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_exit"
                android:padding="12dp"
                android:text="@string/start_exit_btn_text"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </FrameLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>