<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.category.CategoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/category_card_parts"
            style="@style/CategoryCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image_description_default"
                    android:src="@drawable/part3" />

                <ImageView
                    style="@style/CategoryDifficultyImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_description_default"
                    android:src="@drawable/hard" />

                <LinearLayout
                    style="@style/CategoryNameContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/category_parts_text"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/category_parts_result"
                        style="@style/CategoryResultText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Отгадано n/n" />
                </LinearLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/category_card_logo"
            style="@style/CategoryCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image_description_default"
                    android:src="@drawable/car_logo2" />

                <ImageView
                    style="@style/CategoryDifficultyImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_description_default"
                    android:src="@drawable/easy" />

                <LinearLayout
                    style="@style/CategoryNameContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/category_logo_name"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/category_logo_result"
                        style="@style/CategoryResultText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="Отгадано n/n" />
                </LinearLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/CategoryCardViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.7">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/image_description_default"
                    android:src="@drawable/car_logo3" />

                <ImageView
                    style="@style/CategoryDifficultyImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_description_default"
                    android:src="@drawable/expert" />

                <LinearLayout
                    style="@style/CategoryNameContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/category_logo_name"
                        android:textSize="24sp" />

                    <TextView
                        style="@style/CategoryResultSoon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </FrameLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>